test/negative/betweenand02.cfr
// Test for negative between and constraint

a
 b ?
  c ?
  d ?
  e ?
  [c between and e ]


